paragraph color changed

--- a/css/style.css
+++ b/css/style.css
@@ -963,6 +963,7 @@ li.dropdown {
 .creviews .up-content .up-items p,
 .creviews .down-content .down-items p {
   margin-top: 25px;
+  color: #40454f;
 }
 .item-content .item-title {
   margin-left: 25px;
