--- a/css/style.css
+++ b/css/style.css
@@ -1204,6 +1204,7 @@ footer .contentlast {
   color: hsla(0, 0%, 100%, 0.8);
   font-size: 16px;
   align-items: center;
+  padding-bottom: 30px;
 }
 .contentlast p a {
   padding-left: 4px;
